--- a/myproject/ecomm/templates/base.html
+++ b/myproject/ecomm/templates/base.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Hello, world!</title>
@@ -16,11 +16,11 @@
 
 <body>
     <div class="container">
-        
+
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark my-3">
-            
+
             <div class="container-fluid">
-               
+
                 <a class="navbar-brand" href="#">{{request.session.firstname}}</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -35,17 +35,20 @@
                         </li>
                     </ul>
                     <div class="d-flex">
-                        <input class="form-control me-2" type="search" id="myInput" onkeyup="myFunction()" placeholder="Search" aria-label="Search"> 
-                       {% if request.session.email %}
+                        <input class="form-control me-2" type="search" id="myInput" onkeyup="myFunction()" placeholder="Search" aria-label="Search"> {% if request.session.email %}
+
                         <form action="{% url 'logout' %}" method="post" class="d-flex">
                             {% csrf_token %}
+                            <a class="btn btn-primary me-2" href="{% url 'cart' %}">Cart
+                                {{request.session.cart.keys|length}}
+                                
+                             </a>
                             <button class="btn btn-primary me-2" type="submit">Logout</button>
                         </form>
-                        <button class="btn btn-primary" type="submit">Order</button> 
-                        {% else %}
+                        <a href="{% url 'order' %}" class="btn btn-primary">Order</a> {% else %}
+                        <a class="btn btn-primary me-2" href="{% url 'cart' %}">Cart</a>
                         <button class="btn btn-primary me-2" data-bs-toggle="modal" data-bs-target="#login" type="submit">Login</button>
-                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signup" type="submit">SignUp</button> 
-                        {% endif %}
+                        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#signup" type="submit">SignUp</button> {% endif %}
                     </div>
                 </div>
             </div>
@@ -72,10 +75,11 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form class="row g-3" action="{% url 'login_info' %}" method="post">
+                    <form class="row g-3" action="{% url 'login_info' %}" method="post" name="myform" onsubmit="return validateform()">
                         {% csrf_token %}
                         <div class="col-md-6">
-                            
+                            <div id="valid"></div>
+
                             <label for="email" class="form-label">Email</label>
                             <input type="email" class="form-control" name="email" id="email">
                         </div>
@@ -84,10 +88,10 @@
                             <input type="password" class="form-control" name="password" id="password">
                         </div>
                         <div class="col-12">
-                            <button type  = "submit" class="btn btn-primary">Sign in</button>
-                            </form>
-                        </div>
-                    
+                            <button type="submit" class="btn btn-primary">Sign in</button>
+                    </form>
+                    </div>
+
                 </div>
             </div>
         </div>
@@ -143,21 +147,5 @@
 
 </body>
 
-<script>
-    function func() {
-        c = document.getElementById('email').value;
-        if (c == "") {
-       
-            document.getElementById('error').innerHTML = "wrong";
-        }
-        else if(c == '{{request.session.email}}'){
-          alert("ggg")
-
-        }
-        else{
-          alert("by")
-        }
-    }
-</script>
 
 </html>
