--- a/myproject/ecomm/templates/cart.html
+++ b/myproject/ecomm/templates/cart.html
@@ -1,1 +1,81 @@
 {% extends 'base.html' %}
+{% load cart %}
+{% block content %}
+
+    <div class ="container">
+        <h1>Cart</h1>
+        <div class="border rounded p-4 m-4">
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th></th>
+                        <th></th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                  {% if cart_pro %}
+                    {% for cart in cart_pro  %}
+                    <tr>
+                        <td scope="row">Sno.</td>
+                        <td>{{cart.name}}</td>
+                        <td>{{cart.price}}</td>
+                        <td>{{cart|cartquantity:request.session.cart}}</td>
+                        <td>{{cart|total_price:request.session.cart}}</td>
+                        
+                    </tr>
+                   {% endfor %}
+                </tbody>
+                <tfoot>
+                    <tr>
+
+                        <th colspan = "4">Total</th>
+                        <th>{{cart_pro|total_cart_price:request.session.cart}}</th>
+                    </tr>
+                </tfoot>
+            </table> 
+            <div class="m-3 p-3">
+                <a class = "btn btn-dark border rounded col-lg-3 float-end" data-bs-toggle="modal" data-bs-target="#checkout">Checkout</a>
+            </div>
+            
+        </div>
+        {% else %}
+        <h1>Please Add Product </h1>
+        {% endif %}
+    </div>
+
+    {% comment %} checkout modal {% endcomment %}
+    <!-- Button trigger modal -->
+
+
+<!-- Modal -->
+<div class="modal fade" id="checkout" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Check Out Form</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form action="{% url 'checkout' %}" method = "post">
+            {% csrf_token %}
+            <div class="mb-3">
+              <label for="address" class="form-label">Address</label>
+              <input type="text" name="address" id="address" class="form-control" placeholder="" aria-describedby="helpId">
+              <label for="mobile" class="form-label">Mobile</label>
+              <input type="number" name="mobile" id="mobile" class="form-control" placeholder="" aria-describedby="helpId">
+            
+            </div>
+            <button type="submit" class="btn btn-primary">checkout</button>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        
+      </div>
+    </div>
+  </div>
+</div>
+
+
+{% endblock content %}
