--- a/myproject/ecomm/templates/home.html
+++ b/myproject/ecomm/templates/home.html
@@ -135,5 +135,10 @@ Home
 
    </div>
    
+<script>
+    if ( window.history.replaceState ) {
+        window.history.replaceState( null, null, window.location.href );
+    }
+</script>
 
 {% endblock content %}
